# tg-cc

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE.md  Makefile  README.md  config.yaml  docker-compose.yml  projects.yaml  pyproject.toml  requirements.txt  service_install.sh  tg-cc  tg-claude  verbose_output.txt
.github/workflows/: docker-build.yml
ccc/: __init__.py  __main__.py  claude.py  config.py  git.py  messenger.py  process.py
ccc/lark/: __init__.py  bot.py  dedup.py  handlers.py  messenger.py
ccc/telegram/: __init__.py  bot.py  handlers.py  messenger.py
tg_cc/: __main__.py  bot.py  claude.py  config.py  git.py  handlers.py  process.py
tgcc/: __init__.py  __main__.py  bot.py  claude.py  config.py  git.py  handlers.py  process.py
